--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rspress",
-  "version": "1.42.1",
+  "version": "1.43.0-canary-202503021351",
   "repository": {
     "type": "git",
     "url": "https://github.com/web-infra-dev/rspress",
