--- a/packages/plugin-rss/package.json
+++ b/packages/plugin-rss/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rspress/plugin-rss",
-  "version": "1.42.1",
+  "version": "1.43.0-canary-202503021351",
   "description": "A plugin for rss generation for rspress",
   "bugs": "https://github.com/web-infra-dev/rspress/issues",
   "repository": {
