--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,7 +33,7 @@
     }
   },
   "main": "./dist/index.js",
-  "module": "./dist/node/index.js",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
