--- a/packages/plugin-shiki/package.json
+++ b/packages/plugin-shiki/package.json
@@ -17,7 +17,7 @@
   ],
   "type": "module",
   "main": "./dist/index.js",
-  "module": "./dist/node/index.js",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
