chore(plugin-algolia): correct peer dependency version

--- a/packages/plugin-algolia/package.json
+++ b/packages/plugin-algolia/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rspress/plugin-algolia",
-  "version": "1.42.1",
+  "version": "2.0.0-alpha.0",
   "description": "A plugin for rspress to search with algolia in docs.",
   "bugs": "https://github.com/web-infra-dev/rspress/issues",
   "repository": {
@@ -40,7 +40,7 @@
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
-    "@rspress/runtime": "workspace:^1.42.1"
+    "@rspress/runtime": "workspace:^2.0.0-alpha.0"
   },
   "engines": {
     "node": ">=14.17.6"
