--- a/packages/modern-plugin-rspress/package.json
+++ b/packages/modern-plugin-rspress/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rspress/modern-js-plugin",
-  "version": "1.42.1",
+  "version": "2.0.0-alpha.0",
   "description": "A Modern.js plugin to integrate rspress",
   "keywords": [
     "react",
