--- a/e2e/fixtures/rsbuild-image/package.json
+++ b/e2e/fixtures/rsbuild-image/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rspress-fixture/plugin-image",
+  "name": "@rspress-fixture/rsbuild-image",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,8 @@
     "preview": "rspress preview"
   },
   "dependencies": {
-    "@rsbuild-image/react": "^0.0.1-next.31",
-    "@rspress/plugin-image": "workspace:*",
+    "@rsbuild-image/react": "^0.0.1-next.33",
+    "@rsbuild-image/rspress": "^0.0.1-next.33",
     "rspress": "workspace:*"
   },
   "devDependencies": {
