--- a/packages/document/package.json
+++ b/packages/document/package.json
@@ -16,11 +16,14 @@
     "preview": "rspress preview"
   },
   "devDependencies": {
+    "@rsbuild-image/react": "^0.0.1-next.33",
+    "@rsbuild-image/rspress": "^0.0.1-next.33",
     "@rsbuild/plugin-sass": "~1.3.1",
     "@rspress/plugin-algolia": "workspace:*",
     "@rspress/plugin-llms": "workspace:*",
     "@rspress/plugin-shiki": "workspace:*",
     "@rstack-dev/doc-ui": "1.8.0",
+    "@rstack/resource": "git://github.com/rspack-contrib/rstack-design-resources.git",
     "@shikijs/transformers": "^3.2.2",
     "@types/react": "^18.3.21",
     "framer-motion": "12.0.6",
