--- a/packages/document/tsconfig.json
+++ b/packages/document/tsconfig.json
@@ -7,7 +7,8 @@
       "i18n": ["./i18n.json"],
       "@theme": ["./theme"],
       "@zh/*": ["./docs/zh/*"],
-      "@en/*": ["./docs/en/*"]
+      "@en/*": ["./docs/en/*"],
+      "@assets/*": ["./assets/*"]
     },
     "module": "ESNext"
   },
