--- a/packages/create-rspress/package.json
+++ b/packages/create-rspress/package.json
@@ -2,7 +2,7 @@
   "name": "create-rspress",
   "version": "2.0.0-beta.8",
   "description": "Create a new Rspress project",
-  "homepage": "https://rspress.dev",
+  "homepage": "https://rspress.rs",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/web-infra-dev/rspress.git",
