--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -36,7 +36,7 @@
   ],
   "scripts": {
     "//why build twice?": ".module.scss.d.ts is generaterd in webpack loader at the first time and parallel with tsc, it is flasky",
-    "build": "rslib build || rslib build",
+    "build": "modern build && (rslib build || rslib build)",
     "dev": "rslib build -w",
     "reset": "rimraf ./**/node_modules"
   },
@@ -59,6 +59,7 @@
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.52.8",
+    "@modern-js/module-tools": "^2.67.7",
     "@rsbuild/plugin-react": "~1.3.1",
     "@rsbuild/plugin-sass": "~1.3.1",
     "@rsbuild/plugin-svgr": "^1.2.0",
