--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -36,8 +36,8 @@
   ],
   "scripts": {
     "//why build twice?": ".module.scss.d.ts is generaterd in webpack loader at the first time and parallel with tsc, it is flasky",
-    "build": "modern build && (rslib build || rslib build)",
-    "dev": "rslib build -w",
+    "build": "modern build && rslib build",
+    "dev": "modern build -w",
     "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
