--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -99,6 +99,7 @@
     "@types/react": "^18.3.22",
     "@types/react-dom": "^18.3.7",
     "memfs": "^4.17.2",
+    "p-map": "^7.0.3",
     "postcss": "8.5.3",
     "rehype-stringify": "^10.0.1",
     "remark-mdx": "^3.1.0",
