--- a/e2e/fixtures/auto-nav-sidebar-dir-convention/tsconfig.json
+++ b/e2e/fixtures/auto-nav-sidebar-dir-convention/tsconfig.json
@@ -1,5 +1,20 @@
 {
   "compilerOptions": {
-    "jsx": "react"
+    "target": "ES2020",
+    "lib": ["DOM", "ES2020"],
+    "module": "ESNext",
+    "jsx": "react-jsx",
+    "noEmit": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "isolatedModules": true,
+    "resolveJsonModule": true,
+    "moduleResolution": "bundler",
+    "useDefineForClassFields": true,
+    "allowImportingTsExtensions": true
+  },
+  "include": ["docs", "theme", "rspress.config.ts"],
+  "mdx": {
+    "checkMdx": true
   }
 }
