--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -74,6 +74,7 @@
     "html-to-text": "^9.0.5",
     "lodash-es": "^4.17.21",
     "mdast-util-mdxjs-esm": "^2.0.1",
+    "mdast-util-to-string": "^4.0.0",
     "picocolors": "^1.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -81,8 +82,11 @@
     "react-router-dom": "^6.29.0",
     "rehype-external-links": "^3.0.0",
     "rehype-raw": "^7.0.0",
+    "rehype-stringify": "^9.0.3",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
     "rspack-plugin-virtual-module": "1.0.1",
     "shiki": "^3.4.2",
     "tinyglobby": "^0.2.14",
@@ -107,10 +111,6 @@
     "p-map": "^7.0.3",
     "postcss": "8.5.4",
     "rehype-stringify": "^10.0.1",
-    "remark-mdx": "^3.1.0",
-    "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.2",
-    "remark-stringify": "^11.0.0",
     "rimraf": "^6.0.1",
     "rsbuild-plugin-publint": "^0.3.2",
     "rsbuild-plugin-virtual-module": "0.2.0",
