--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -37,6 +37,7 @@
     "runtime.ts",
     "theme.ts",
     "config.ts",
+    "shiki-transformers.ts",
     "meta-json-schema.json"
   ],
   "scripts": {
