--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,7 +6,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/web-infra-dev/rspress.git",
-    "directory": "packages/cli/core"
+    "directory": "packages/core"
   },
   "license": "MIT",
   "sideEffects": [
