--- a/packages/plugin-llms/package.json
+++ b/packages/plugin-llms/package.json
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.52.8",
-    "@rsbuild/core": "~1.3.22",
+    "@rsbuild/core": "~1.4.0-rc.0",
     "@rslib/core": "0.10.2",
     "@rspress/config": "workspace:*",
     "@rspress/runtime": "workspace:*",
