--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -37,7 +37,7 @@
     "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
-    "@rsbuild/core": "~1.3.22",
+    "@rsbuild/core": "~1.4.0-rc.0",
     "@shikijs/rehype": "^3.4.2",
     "gray-matter": "4.0.3",
     "lodash-es": "^4.17.21",
