--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -55,7 +55,6 @@
     "@rsbuild/core": "~1.4.0-rc.0",
     "@rsbuild/plugin-react": "~1.3.2",
     "@rspress/mdx-rs": "0.6.6",
-    "@rspress/plugin-container-syntax": "workspace:*",
     "@rspress/plugin-last-updated": "workspace:*",
     "@rspress/plugin-medium-zoom": "workspace:*",
     "@rspress/runtime": "workspace:*",
@@ -100,10 +99,12 @@
     "@types/node": "^22.8.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "mdast-util-mdx-expression": "^2.0.1",
     "memfs": "^4.17.2",
     "p-map": "^7.0.3",
     "postcss": "8.5.6",
     "rehype-stringify": "^10.0.1",
+    "remark-directive": "^4.0.0",
     "remark-mdx": "^3.1.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
