--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -52,7 +52,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@rsbuild/core": "~1.4.0-rc.0",
+    "@rsbuild/core": "~1.4.0",
     "@rsbuild/plugin-react": "~1.3.2",
     "@rspress/mdx-rs": "0.6.6",
     "@rspress/plugin-last-updated": "workspace:*",
