--- a/packages/plugin-llms/tsconfig.json
+++ b/packages/plugin-llms/tsconfig.json
@@ -7,5 +7,12 @@
     "rootDir": "src"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "references": [
+    {
+      "path": "../shared"
+    },
+    {
+      "path": "../core"
+    }
+  ]
 }
