--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -55,8 +55,6 @@
     "@rsbuild/core": "~1.4.3",
     "@rsbuild/plugin-react": "~1.3.3",
     "@rspress/mdx-rs": "0.6.6",
-    "@rspress/plugin-last-updated": "workspace:*",
-    "@rspress/plugin-medium-zoom": "workspace:*",
     "@rspress/runtime": "workspace:*",
     "@rspress/shared": "workspace:*",
     "@rspress/theme-default": "workspace:*",
@@ -70,6 +68,7 @@
     "html-to-text": "^9.0.5",
     "lodash-es": "^4.17.21",
     "mdast-util-mdxjs-esm": "^2.0.1",
+    "medium-zoom": "1.1.0",
     "picocolors": "^1.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -99,6 +98,7 @@
     "@types/node": "^22.8.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "execa": "8.0.1",
     "mdast-util-mdx-expression": "^2.0.1",
     "memfs": "^4.17.2",
     "p-map": "^7.0.3",
