--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -41,6 +41,7 @@
     "@shikijs/rehype": "^3.4.2",
     "gray-matter": "4.0.3",
     "lodash-es": "^4.17.21",
+    "react-medium-image-zoom": "^5.2.14",
     "unified": "^11.0.5"
   },
   "devDependencies": {
