--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -20,6 +20,9 @@
     },
     "./config": {
       "default": "./config.ts"
+    },
+    "./core": {
+      "default": "./core.ts"
     }
   },
   "main": "./dist/index.js",
@@ -33,7 +36,8 @@
     "dist",
     "runtime.ts",
     "theme.ts",
-    "config.ts"
+    "config.ts",
+    "core.ts"
   ],
   "scripts": {
     "build": "rslib build",
