--- a/packages/plugin-shiki/package.json
+++ b/packages/plugin-shiki/package.json
@@ -29,7 +29,6 @@
     "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
-    "@rspress/shared": "workspace:*",
     "hast-util-from-html": "^1.0.2",
     "shiki": "^0.14.7",
     "unist-util-visit": "^4.1.2"
@@ -45,6 +44,9 @@
     "react": "^18.3.1",
     "typescript": "^5.5.3",
     "unified": "^10.1.2"
+  },
+  "peerDependencies": {
+    "rspress": "workspace:^1.44.0"
   },
   "engines": {
     "node": ">=14.17.6"
