--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -91,6 +91,7 @@
     "rspack-plugin-virtual-module": "1.0.1",
     "shiki": "^3.8.1",
     "tinyglobby": "^0.2.14",
+    "tinypool": "^1.1.1",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
     "unist-util-visit-children": "^3.0.0"
