--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -110,6 +110,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "execa": "8.0.1",
+    "mdast-util-directive": "^3.1.0",
     "mdast-util-mdx-expression": "^2.0.1",
     "memfs": "^4.17.2",
     "p-map": "^7.0.3",
