--- a/packages/plugin-llms/package.json
+++ b/packages/plugin-llms/package.json
@@ -5,11 +5,21 @@
   "bugs": "https://github.com/web-infra-dev/rspress/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/web-infra-dev/rspress",
+    "url": "git+https://github.com/web-infra-dev/rspress.git",
     "directory": "packages/plugin-llm"
   },
   "license": "MIT",
   "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./runtime": {
+      "types": "./dist/runtime/index.d.ts",
+      "default": "./dist/runtime/index.js"
+    }
+  },
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -33,10 +43,15 @@
   "devDependencies": {
     "@microsoft/api-extractor": "^7.52.9",
     "@rsbuild/core": "~1.4.11",
+    "@rsbuild/plugin-react": "~1.3.4",
+    "@rsbuild/plugin-sass": "~1.3.3",
     "@rslib/core": "0.11.0",
     "@rspress/config": "workspace:*",
     "@types/hast": "^3.0.4",
     "@types/node": "^22.8.1",
+    "@types/react": "^19.1.8",
+    "react": "^19.1.0",
+    "rsbuild-plugin-publint": "^0.3.2",
     "typescript": "^5.8.2",
     "vfile": "^6.0.3"
   },
